# hammered-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build_backends.py  build_run.py  cchk.toml
.github/ISSUE_TEMPLATE/: criteria-issue.md  feature.md  task.md
.github/workflows/: cmake-multi-platform.yml  commit-check.yml  cpp-linter.yml  cppcheck.yml  msvc.yml
cmake_utility/: utility.cmake
engine/: CMakeLists.txt
engine/code/: CMakeLists.txt
engine/code/include/: camera.hpp  engine.hpp  pch.hpp
engine/code/include/core/: device.hpp  ecs.hpp  fileio.hpp  input.hpp  renderer.hpp
engine/code/include/platform/opengl/: imgui_impl_gl.hpp  opengl_gl.hpp  shader_gl.hpp
engine/code/include/platform/vulkan/: descriptors_vk.hpp  device_vk.hpp  images_vk.hpp  imgui_impl_vk.hpp  loader_vk.hpp  pipelines_vk.hpp  types_vk.hpp
engine/code/include/utility/: console.hpp  logger.hpp  macros.hpp
engine/code/include/utility/commands/: command.hpp  input_command.hpp
engine/code/source/: camera.cpp  engine.cpp
engine/code/source/core/: device.cpp  ecs.cpp  fileio.cpp  input.cpp  renderer.cpp
engine/code/source/platform/opengl/: device_gl.cpp  imgui_impl_gl.cpp  opengl_gl.cpp  renderer_gl.cpp  shader_gl.cpp
engine/code/source/platform/vulkan/: descriptors_vk.cpp  device_vk.cpp  images_vk.cpp  imgui_impl_vk.cpp  loader_vk.cpp  pipelines_vk.cpp  renderer_vk.cpp
engine/code/source/utility/: logger.cpp
game/: CMakeLists.txt
game/assets/shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient_color.comp  mesh.frag  mesh.vert  screen_quad.frag  screen_quad.vert  tex_image.frag
game/assets/shaders_source/: colored_triangle.vert  gradient_color.comp
game/src/: main.cpp
